# serializer version: 1
# name: test_entities[switch.qube_heat_pump_anti_legionella_cycle-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.qube_heat_pump_anti_legionella_cycle',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Anti-legionella cycle',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Anti-legionella cycle',
    'platform': 'hr_energy_qube',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'anti_legionella_cycle',
    'unique_id': '01JQUBEHEATPUMP00000000000-anti_legionella_cycle',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[switch.qube_heat_pump_anti_legionella_cycle-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Qube heat pump Anti-legionella cycle',
    }),
    'context': <ANY>,
    'entity_id': 'switch.qube_heat_pump_anti_legionella_cycle',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_entities[switch.qube_heat_pump_heating_curve-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.qube_heat_pump_heating_curve',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Heating curve',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Heating curve',
    'platform': 'hr_energy_qube',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'heating_curve',
    'unique_id': '01JQUBEHEATPUMP00000000000-heating_curve',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[switch.qube_heat_pump_heating_curve-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Qube heat pump Heating curve',
    }),
    'context': <ANY>,
    'entity_id': 'switch.qube_heat_pump_heating_curve',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_entities[switch.qube_heat_pump_heating_demand-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.qube_heat_pump_heating_demand',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Heating demand',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Heating demand',
    'platform': 'hr_energy_qube',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'heating_demand',
    'unique_id': '01JQUBEHEATPUMP00000000000-heating_demand',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[switch.qube_heat_pump_heating_demand-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Qube heat pump Heating demand',
    }),
    'context': <ANY>,
    'entity_id': 'switch.qube_heat_pump_heating_demand',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_entities[switch.qube_heat_pump_summer_mode-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.qube_heat_pump_summer_mode',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Summer mode',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Summer mode',
    'platform': 'hr_energy_qube',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'summer_mode',
    'unique_id': '01JQUBEHEATPUMP00000000000-summer_mode',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[switch.qube_heat_pump_summer_mode-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Qube heat pump Summer mode',
    }),
    'context': <ANY>,
    'entity_id': 'switch.qube_heat_pump_summer_mode',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
